# Apollo.Data

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  Dockerfile  LICENSE  README.md  Rakefile  server.cfg
clients/dotnet/ShakaDB.Client/: Constants.cs  DataPoint.cs  ShakaDbSession.cs
clients/dotnet/ShakaDB.Client.Tests/: ProtocolTests.cs  SessionTests.cs  ShakaDB.Client.Tests.csproj
clients/python/: setup.py
clients/python/pyshaka/: __init__.py  common.py  protocol.py  pyshaka.py
clients/python/tests/: api_tests.py
docs/pages/: _layout.pug  docs.pug  getting-started.pug  promo.pug
docs/style/: _common.scss  _docs.scss  _layout.scss  _promo.scss  _reset.scss  _theme.scss
prototype/mmap-test/: CMakeLists.txt  main.c
prototype/native-rest-api/: CMakeLists.txt  main-client.c  main.c  server.c  server.h
prototype/transfer-compression/: CMakeLists.txt  lz4.c  lz4.h  main-client.c  main.c
service/: CMakeLists.txt  data-point.h  main.cc
service/engine/: data-chunk.cc  data-chunk.h  data-point-reader.cc  data-point-reader.h  database.cc  database.h  memory-storage.cc  storage-page.h  storage.h
service/engine/storage/: cached-storage-page.cc  cached-storage-page.h  cached-storage.cc  cached-storage.h  memory-storage-page.cc  memory-storage-page.h  memory-storage.cc  memory-storage.h  storage-page.h  storage.h
service/src/: data-point.h
service/src/engine/: data-chunk.cc  data-point-reader.cc  data-point-reader.h
service/src/engine/storage/: cached-storage-page.h  cached-storage.cc  cached-storage.h  memory-storage-page.cc
service/src/utils/: file.h  log.cc
service/utils/: log.cc  log.h
src/: bootstrapper.cc  bootstrapper.h  c_common.c  c_common.h  common.c  common.h  configuration.cc  configuration.h  data-point-reader.h  data-point.c  data-point.cc  data-point.h  data-points-reader.h  database.h  diagnostics.c  diagnostics.h  fatal-exception.cc  fatal-exception.h  file-log.cc  file-log.h  log.h  main.c  main.cc  protocol.c  protocol.h
src/client/: client-data-point-reader.cc  client-data-point-reader.h  client-data-points-reader.cc  client-data-points-reader.h  client.c  client.cc  client.h  data-points-iterator.c  data-points-iterator.h  main.c  main.cc  read-points-iterator.cc  read-points-iterator.h  receive-stream.cc  receive-stream.h  session-manager.cc  session-manager.h  session.c  session.cc  session.h
src/ctl/: main.c  session.c  session.h
src/engine/: data-chunk.cc  data-chunk.h  data-point-reader.cc  data-point-reader.h  data-series.cc  data-series.h  database.cc  database.h
src/engine/storage/: cached-storage-page.cc  cached-storage-page.h  cached-storage.cc  cached-storage.h  page-allocator.cc  (+5 more)
src/middleware/: base-handler.cc  base-handler.h  packet-logger.cc  packet-logger.h  ping-handler.cc  ping-handler.h  read-handler.cc  read-handler.h  truncate-handler.cc  truncate-handler.h  write-handler.cc  write-handler.h  write-queue.cc  write-queue.h
src/network/: client-handler.c  client-handler.h  protocol.c  protocol.h  server.c  server.h  transport.c  transport.h
src/protocol/: c_data_packet.c  c_data_packet.h  data-packet.cc  data-packet.h  packet-fragment.cc  packet-fragment.h  packet-loader.cc  packet-loader.h  ping-packet.cc  ping-packet.h  read-request.cc  read-request.h  read-response.cc  read-response.h  simple-response.cc  simple-response.h  truncate-request.cc  truncate-request.h  write-request.cc  write-request.h  write-response.cc  write-response.h
src/server/: client-handler.cc  client-handler.h  client-responder.h  data-packet.h  server-client.h  server.c  server.cc  server.h  uv-common.cc  uv-common.h  uv-server-client.cc  uv-server-client.h  uv-server.cc  uv-server.h  v2-server.c  v2-server.h  web-server.cc  web-server.h
src/storage/: cache-manager.c  cache-manager.h  chunk-cache.c  chunk-cache.h  chunk.c  chunk.h  data-chunk.c  data-chunk.cc  data-chunk.h  data-point-reader.cc  data-point-reader.h  data-points-reader.c  data-points-reader.h  data-series.c  data-series.cc  data-series.h  database.c  database.cc  database.h  disk.c  disk.h  points-reader.c  points-reader.h  series.c  series.h  standard-data-point-reader.cc  standard-data-point-reader.h  standard-data-points-reader.cc  standard-data-points-reader.h  standard-database.cc  standard-database.h
src/utils/: Stream.h  allocator.cc  allocator.h  base-database-tests.cc  buffer.h  common.cc  common.h  diagnostics.c  diagnostics.h  directory.cc  directory.h  disk.c  disk.h  file-log.cc  file-log.h  file.cc  file.h  log.h  memory-buffer.cc  memory-buffer.h  memory.c  memory.h  monitor-scope.cc  monitor-scope.h  monitor.cc  monitor.h  network.c  network.h  ring-buffer.cc  ring-buffer.h  rw-lock-scope.cc  rw-lock-scope.h  rw-lock.cc  rw-lock.h  shallow-buffer.cc  shallow-buffer.h  socket-stream.cc  socket-stream.h  stopwatch.cc  stopwatch.h  (+5 more)
test/: common-tests.c  common-tests.h  common.h  data-point-tests.c  data-point-tests.h  database-tests.c  database-tests.cc  database-tests.h  framework.c  framework.h  main-stress.c  main-unit.c  main.c  main.cc  server-tests.c  server-tests.h
test/engine/: common.h  concurrency-tests.h  performance-tests.h  unit-tests.h
test/framework/: assert.cc  assert.h  test-context.cc  test-context.h  test-runner.cc  test-runner.h  validation-exception.cc  validation-exception.h
test/server/: end-to-end.h  server-tests.h
test/storage/: common.h  concurrency-tests.h  performance-tests.h  unit-tests.h
test/tests/: base-database-tests.cc  base-database-tests.h  common.h  configuration-tests.cc  configuration-tests.h  database-basic-tests.cc  database-basic-tests.h  database-concurrency-tests.cc  database-concurrency-tests.h  database-performance-tests.cc  database-performance-tests.h  database-unit-tests.h  end-to-end.cc  end-to-end.h  monitor-tests.cc  monitor-tests.h  null-log.h  ring-buffer-tests.cc  ring-buffer-tests.h  rw-lock-tests.cc  rw-lock-tests.h
test/utils/: ring-buffer-tests.h  rw-lock-test.h  rw-lock-tests.h
tools/: inject_headers.py
wrappers/dotnet/: ShakaDB.Client.sln
wrappers/python/: setup.py
(+48 files in other folders)
